--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies.compile(
  ['se.soy.gpg:GPG:1.0.+'],
  ['org.slf4j:slf4j-api:1.7.+'],
  ['ch.qos.logback:logback-classic:1.1.+'],
+ ['org.yaml:snakeyaml:1.+'],
 )
 
 jar.manifest.attributes 'Main-Class': mainClassName
