--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ dependencies.compile(
  ['org.slf4j:slf4j-api:1.7.+'],
  ['ch.qos.logback:logback-classic:1.1.+'],
  ['org.yaml:snakeyaml:1.+'],
+ ['org.jboss.logging:jboss-logging:3.1.0.CR2'],
+ fileTree(dir: 'lib', include: '*.jar'),
 )
 
 jar.manifest.attributes 'Main-Class': mainClassName
