Change default task to run

--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'application'
 
-defaultTasks 'compileTestJava'
+defaultTasks 'run'
 
 repositories.mavenCentral()
 
